<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_holding_padding"
    android:background="@color/white">

    <TextView
        android:id="@+id/symbolText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_symbol"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/on_surface"
        app:layout_constraintEnd_toStartOf="@+id/ltpText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ltpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_ltp"
        android:textColor="@color/on_surface"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_quantity"
        android:textColor="@color/on_surface_variant"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/pnlText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbolText"
        android:layout_marginTop="@dimen/margin_small" />

    <TextView
        android:id="@+id/pnlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_pnl"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltpText"
        android:layout_marginTop="@dimen/margin_small" />

</androidx.constraintlayout.widget.ConstraintLayout>