<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_xlarge">

    <ImageView
        android:layout_width="@dimen/icon_size_xlarge"
        android:layout_height="@dimen/icon_size_xlarge"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/error_unknown"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_unknown"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/retryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/action_retry"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/offlineRetryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText" />

    <Button
        android:id="@+id/offlineRetryButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/action_use_offline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retryButton" />

</androidx.constraintlayout.widget.ConstraintLayout>