<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plSummaryCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/summary_card_elevation"
    android:background="@color/summary_card_background_color"
    app:cardCornerRadius="@dimen/summary_card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/summary_card_background_color"
        android:padding="@dimen/padding_large"
        android:elevation="@dimen/elevation_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/summaryHeaderCollapsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/plLabelCollapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profit_loss"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:padding="@dimen/summary_card_text_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/on_surface" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/summaryExpandIcon"
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:src="@drawable/ic_expand"
                app:layout_constraintTop_toTopOf="@+id/plLabelCollapsed"
                app:layout_constraintStart_toEndOf="@+id/plLabelCollapsed"
                app:layout_constraintBottom_toBottomOf="@+id/plLabelCollapsed"
                app:tint="@color/on_surface" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalPnlCollapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹0.00"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/on_surface" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/summaryDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summaryHeaderCollapsed">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_value"
                android:textColor="@color/on_surface"
                android:padding="@dimen/summary_card_text_padding"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                android:textColor="@color/on_surface"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:padding="@dimen/summary_card_text_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelCurrentValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelTotalInvestment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_investment"
                android:textColor="@color/on_surface"
                android:textSize="@dimen/text_size_medium"
                android:padding="@dimen/summary_card_text_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCurrentValue"
                android:layout_marginTop="@dimen/margin_medium" />

            <TextView
                android:id="@+id/totalInvestment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                android:textColor="@color/on_surface"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:padding="@dimen/summary_card_text_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelTotalInvestment" />

            <TextView
                android:id="@+id/labelTodaysPnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todays_pnl"
                android:padding="@dimen/summary_card_text_padding"
                android:textColor="@color/on_surface"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelTotalInvestment"
                android:layout_marginTop="@dimen/margin_medium" />

            <TextView
                android:id="@+id/todaysPnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:padding="@dimen/summary_card_text_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelTodaysPnl" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                android:layout_marginTop="@dimen/divider_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/todaysPnl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/summaryHeaderExpanded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/padding_small"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/plLabelExpanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profit_loss"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:padding="@dimen/summary_card_text_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/on_surface" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/summaryCollapseIcon"
                    android:layout_width="@dimen/icon_size_medium"
                    android:layout_height="@dimen/icon_size_medium"
                    android:src="@drawable/ic_collapse"
                    app:layout_constraintTop_toTopOf="@+id/plLabelExpanded"
                    app:layout_constraintStart_toEndOf="@+id/plLabelExpanded"
                    app:layout_constraintBottom_toBottomOf="@+id/plLabelExpanded"
                    app:tint="@color/on_surface" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/totalExpanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₹0.00"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:padding="@dimen/summary_card_text_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/on_surface" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>